// Original file: proto/frontend.proto

import type { DeviceData as _frontendPackage_DeviceData, DeviceData__Output as _frontendPackage_DeviceData__Output } from '../frontendPackage/DeviceData';

export interface ChartDatasetResponse {
  'DeviceData'?: (_frontendPackage_DeviceData | null);
}

export interface ChartDatasetResponse__Output {
  'DeviceData'?: (_frontendPackage_DeviceData__Output);
}
